tests/NormalTests/paczka1/fuzzy1/11404410.err
Error in line 21: 4ohiM7VY9 A931 34,6
Error in line 35: g1ZHbDQ6 A130 54,0
